fix(cart): robust redirect encoding when requiring login to add-to-cart